--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,7 +11,6 @@
     @include tablet{
       flex-direction: row;
       justify-content: space-between;
-      align-items: flex-start;
     }
     @include desktop {
       padding:0 8.125rem;
